# claimflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/auth/: deps.py  jwt.py
backend/app/claimguard/: audit.py
backend/app/llm/: client.py  documents.py  fallbacks.py  gemini.py  routing.py  schemas.py
backend/app/ml/: base.py
backend/app/models/: __init__.py  artifacts.py  entities.py  enums.py  records.py
backend/app/rag/: __init__.py  anonymizer.py  embedder.py  indexer.py  retriever.py  store.py
backend/app/routers/: agent.py  auth.py  claims.py  documents.py  specialist.py
backend/app/services/: dicom_preview.py  inference_runner.py  storage.py
backend/app/workflow/: state_machine.py
backend/ml_training/: colab_train.ipynb  evaluate.py  measure_fusion_fpr.py  train_authenticity.py  train_modality.py
backend/scripts/: bootstrap_assets.py  seed.py
backend/seed-assets/: ATTRIBUTION.md  tampered_xray.dcm
backend/tests/: conftest.py  test_agent_flow.py  test_audit.py  test_auth.py  test_claims.py  test_documents.py  test_inference_runner.py  test_llm_client.py  test_llm_documents.py  test_llm_fallbacks.py  test_llm_gemini.py  test_llm_stages.py  test_ml_training.py  test_notifications.py  test_rag.py  test_real_analyzer.py  test_seed.py  test_specialist_flow.py  test_stage1_vision_prep.py  test_state_machine.py  test_storage.py  test_tampering.py
backend/weights/: authenticity_config.json  modality_config.json
(+80 files in other folders)
