[project]
name = "claimflow-backend"
version = "0.1.0"
description = "ClaimFlow — human-in-the-loop medical insurance claims prototype (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pypdf>=4.2",
    "pydicom>=2.4",
    "pillow>=10.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "timm>=1.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "scipy>=1.12",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
training = [
    "mlflow>=2.12",
    "datasets>=2.19",
    "kagglehub>=0.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
